@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-06T00:53:13Z",
+  "timestamp" : "2025-05-07T00:53:22Z",
   "count_outdated" : 1437,
   "uniques_outdated" : 430,
-  "count" : 1444,
-  "uniques" : 436,
+  "count" : 1445,
+  "uniques" : 437,
   "views" : [
     {
       "timestamp": "2025-04-24T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2025-05-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
